[package]
name = "que-mira-bobo"
version = "0.1.0"
edition = "2021"
description = "Terminal tool"
homepage = "https://github.com/nbittich/que-mira-bobo"
license = "MPL-2.0"
readme = "README.md"
authors = ["Nordine Bittich"]


[dependencies]
crossterm = "0.26.0"
serde = "1.0.152"
serde_json = "1.0.93"
spargebra = "0.2.6"
tui = "0.19.0"
tui-textarea = "0.2.0"
