[package]
name = "que-mira-bobo"
version = "0.1.0"
edition = "2021"
description = "Terminal tool"
homepage = "https://github.com/nbittich/que-mira-bobo"
license = "MPL-2.0"
readme = "README.md"
authors = ["Nordine Bittich"]


[dependencies]
crossterm = { version = "0.25.0", features = ["bracketed-paste"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
spargebra = "0.2.6"
tui = "0.19.0"
tui-textarea = { version = "0.2.0", features = ["search", "arbitrary"] }

[dependencies.reqwest]
default-features= false
version = "0.11.4"
features= ["blocking", "json", "rustls-tls"]
